# ai-creator

./: .gitignore  .gitmodules  .npmrc  CLAUDE.md  README.md  debug_stagehand.py  debug_stagehand_detailed.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.local.json
agent-definitions/: README.md  analytics.yaml  browser-use-agent.yaml  content-creation.yaml  image-generation.yaml  publish-workflow.yaml  topic-suggestion.yaml  universal-search-agent.yaml  viral-content.yaml  workflow-generator.yaml
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: config.rs  lib.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/db/: mod.rs  models.rs  repository.rs  schema.sql
apps/desktop/src-tauri/src/sidecar/: mod.rs  rpc.rs
apps/desktop/src-tauri/src/sync/: api_client.rs  engine.rs  mod.rs
apps/desktop/src-tauri/src/sync/providers/: account.rs  mod.rs  project.rs  project_topic.rs  user.rs
apps/sidecar/: CLAUDE.md  pyproject.toml
apps/sidecar/src/: test_rpc_integration.py
apps/sidecar/src/sidecar/: __init__.py  executor.py  main.py  publish_executor.py
apps/sidecar/src/sidecar/browser/: __init__.py  fingerprint.py  hybrid_manager.py  manager.py  schemas.py  stagehand_client.py
apps/sidecar/src/sidecar/scheduler/: __init__.py  account_sync_scheduler.py  publish_scheduler.py
apps/sidecar/src/sidecar/services/: __init__.py  account_sync.py  credential_sync.py  profile_sync.py
apps/sidecar/src/sidecar/tools/: browser.py  browser_use_publish.py  credential.py
apps/sidecar/tests/: test_stagehand_client.py
docs/: 00-品牌愿景.md  01-系统架构.md  02-桌面端设计.md  02-系统架构评估报告.md  03-AgentCore评估报告.md  03-移动端设计.md  04-云端服务设计.md  04-智能工作流生成器设计.md  04-浏览器自动化评估报告.md  05-Agent-Runtime.md  05-AgentSkill集成设计.md  05-Stagehand集成评估报告.md  06-A2UI集成评估.md  06-平台适配器.md  07-AI工作流.md  07-实施计划.md  08-BettaFish舆情分析集成.md  08-Phase3-ImplementationPlan.md  08-数据模型.md  09-Phase4-ImplementationPlan.md  09-商业模式.md  10-约束细则.md  11-开发规范.md  (+11 more)
(+144 files in other folders)
