# apps/sidecar/pyproject.toml
# @author Ysf

[project]
name = "sidecar"
version = "0.1.0"
description = "AI Creator 桌面端 Python Sidecar"
requires-python = ">=3.11"
dependencies = [
    "agent-core",
    "playwright>=1.40.0",
    "apscheduler>=3.10.0",
    "cryptography>=41.0.0",
    "browser-use>=0.1.0",
    "langchain-openai>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sidecar"]
